# Test_project

./: CMakeLists.txt
Hort_V1_main/: project.pros
Hort_V1_main/src/EZ-Template/: auton.cpp
